# codeloops

./: .gitignore  .scalafmt.conf  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  REVIEW.md  TEST_INSTRUCTIONS.md  biome.jsonc  build.sbt  eslint.config.js  godeploy.config.json  my_feedback.md  package-lock.json  package.json  prompt.md  prompt4.md  running-notes.md  test-critic.ts  test-global-config.ts  tsconfig.build.json  tsconfig.json  tsconfig.tsbuildinfo
.beads/: deletions.jsonl  issues.jsonl
.cursor/rules/: ultracite.mdc
.github/workflows/: ci.yml  docs.yml
.husky/: pre-commit
agents/: actor.md  critic.md
commands/: critic-off.md  critic-on.md  critic-status.md
crates/codeloops/: Cargo.toml
crates/codeloops-agent/: Cargo.toml
crates/codeloops-agent/src/: claude.rs  claude_gateway.rs  cursor.rs  lib.rs  opencode.rs  output.rs  spawner.rs  traits.rs
crates/codeloops-core/: Cargo.toml
crates/codeloops-core/src/: context.rs  error.rs  lib.rs  loop_runner.rs  outcome.rs  watcher.rs
crates/codeloops-critic/: Cargo.toml
crates/codeloops-critic/src/: decision.rs  evaluator.rs  lib.rs  prompts.rs
crates/codeloops-db/: Cargo.toml
crates/codeloops-db/src/: lib.rs  projects.rs  prompts.rs  sessions.rs
crates/codeloops-git/: Cargo.toml
crates/codeloops-git/src/: diff.rs  lib.rs  status.rs
crates/codeloops-logging/: Cargo.toml
crates/codeloops-logging/src/: events.rs  lib.rs  session.rs
crates/codeloops-sessions/: Cargo.toml
crates/codeloops-sessions/src/: lib.rs  parser.rs  store.rs  types.rs  watcher.rs
crates/codeloops-sessions/tests/: metrics_tests.rs  session_tests.rs
crates/codeloops-skills/: Cargo.toml
crates/codeloops-skills/src/: skills.rs
crates/codeloops-tui/: Cargo.toml
crates/codeloops-tui/src/: app.rs  fallback.rs  layout.rs  lib.rs  render.rs  renderer.rs  spinner.rs  watcher.rs
crates/codeloops-tui/tests/: render_smoke.rs
crates/codeloops/src/: config.rs  init.rs  main.rs  projects.rs  sessions.rs  skills.rs  ui.rs
crates/codeloops/src/api/: context.rs  extractors.rs  mod.rs  projects.rs  prompt.rs  prompt_instructions.rs  sessions.rs  sse.rs  stats.rs
crates/codeloops/src/db/: mod.rs  prompt_store.rs
crates/codeloops/src/prompt/: mod.rs  protocol.rs  scanner.rs  session.rs  system_prompt.rs
crates/codeloops/src/prompt/tui/: app.rs  layout.rs  mod.rs
crates/codeloops/src/prompt/tui/widgets/: draft.rs  input.rs  mod.rs  progress.rs  question.rs
docs/: AGENTS_TEMPLATE.md  INSTALL_GUIDE.md  OVERVIEW.md  book.toml
docs/book/: 404.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-257f5573.js  searchindex-29d01579.js  searchindex-86213fbd.js  searchindex-e5ba35e3.js  toc-5890de18.js  toc-99e2e1e4.js  toc-f2fad483.js  toc.html
docs/book/appendix/: background.html  best-practices.html  faq.html
docs/book/architecture/: actor-critic.html  crates.html  data-flow.html  overview.html
docs/book/contributing/: adding-agents.html  development.html
docs/book/getting-started/: first-session.html  installation.html  quickstart.html
docs/book/reference/: api-server.html  config-schema.html  session-format.html
docs/book/theme/: custom.css
docs/book/user-guide/: agents.html  cli-reference.html  configuration.html  prompts.html  sessions.html
docs/book/web-ui/: development.html  overview.html  prompt-builder.html  usage.html
docs/migrations/: MIGRATION_GUIDE_0_6_0.md
docs/plans/: 2026-01-06-actor-critic-system-design.md  2026-01-24-session-viewer-design.md
docs/src/: SUMMARY.md  introduction.md
docs/src/appendix/: background.md  best-practices.md  faq.md
docs/src/architecture/: actor-critic.md  crates.md  data-flow.md  overview.md
docs/src/contributing/: adding-agents.md  development.md
docs/src/getting-started/: first-session.md  installation.md  quickstart.md
docs/src/reference/: api-server.md  config-schema.md  session-format.md
docs/src/user-guide/: agents.md  cli-reference.md  configuration.md  prompts.md  sessions.md
docs/src/web-ui/: development.md  overview.md  prompt-builder.md  usage.md
lib/: filters.ts  logger.ts  memory-store.ts  types.ts
main/scala/boogieloops/: Schema.scala
plugin/: index.ts  memory.test.ts  memory.ts  todo-extractor.ts
prompts/pr-review/: reviewer-correctness.md  reviewer-security.md  signal-vs-noise.md  synthesize.md
scripts/: build-plugin.ts  install-plugin.sh  install-plugin.ts  setup.sh  setup.ts
scripts/migrate_sessions_crate/: Cargo.toml
scripts/migrate_sessions_crate/src/: main.rs
scripts/migrations/: migrate_appdata_and_config.ts  migrate_fastagent_config.ts
shared/: design-tokens.css
site/: index.html  package.json
site/src/: style.css
skills/actor-critic-protocol/: SKILL.md
src/: MemoryStore.test.ts  MemoryStore.ts  config.ts  index.ts  logger.ts  memory-store.test.ts  memory-store.ts
src/agents/: BaseAgent.ts  actor.md  actor_critic_system.md  critic.md
src/agents/critic/: Critic.ts  CriticAgent.test.ts  CriticAgent.ts
src/agents/summarize/: Summarize.ts  SummarizerAgent.test.ts  SummarizerAgent.ts
src/config/: index.ts  models.ts
src/core/: config.ts  filters.ts  memory-store.ts
src/critic/: feedback.test.ts  feedback.ts  index.ts  parser.test.ts  parser.ts  session.ts  types.ts
src/engine/: ActorCriticEngine.ts  KnowledgeGraph.ts
src/main/scala/: Main.scala
src/server/: http.ts  index.ts  stdio.ts  tools.ts
src/utils/: fun.ts  git.test.ts  git.ts  project.test.ts  project.ts  todo-extractor.ts
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
ui/src/: App.tsx  index.css  serve.ts
ui/src/__tests__/: routing.test.tsx
ui/src/api/: client.ts  types.ts
ui/src/components/: ContentBlock.tsx  CopyButton.tsx  CriticTrail.tsx  DotChart.tsx  HealthPulse.tsx  IterationConversation.tsx  IterationTimeline.tsx  Layout.tsx  SectionHeader.tsx  SessionFilters.tsx  SessionList.tsx  SessionTable.tsx  StatsBar.tsx  SubNav.tsx  Toast.tsx  Welcome.tsx
ui/src/hooks/: useMetrics.ts  useNodeOutput.ts  usePromptSession.ts  useRunState.ts  (+4 more)
(+44 files in other folders)
