[package]
name = "codeloops-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core loop orchestration for codeloops"

[dependencies]
codeloops-agent.workspace = true
codeloops-critic.workspace = true
codeloops-git.workspace = true
codeloops-logging.workspace = true

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
