[package]
name = "codeloops-critic"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Critic evaluation system for codeloops"

[dependencies]
codeloops-agent.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
