[package]
name = "codeloops-logging"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Structured logging for codeloops"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
