[package]
name = "codeloops-logging"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Structured logging for codeloops"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono.workspace = true
colored.workspace = true
dirs.workspace = true
sha2.workspace = true
hex.workspace = true
