[package]
name = "codeloops-sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
