[package]
name = "codeloops-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI renderer for codeloops session output"

[dependencies]
codeloops-logging.workspace = true

crossterm.workspace = true
ratatui = "0.29"
tokio.workspace = true
colored.workspace = true
dirs.workspace = true
tracing.workspace = true
